# navrim

./: .gitignore  CHANGELOG.md  PHOSPHOBOT_TERMINATION.md  PORT_80_FIX.md  QUICK_START.md  README.md  VERIFICATION_STEPS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-process-kill.js  todesktop.json  tsconfig.json
.erb/configs/: webpack.config.renderer.dev.dll.ts  webpack.config.renderer.dev.ts  webpack.config.renderer.prod.ts
.erb/scripts/: notarize.js
.github/workflows/: publish.yml  test.yml
dashboard/: .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/api/: base.ts  configuration.ts  index.ts  status.ts
navrim/: pyproject.toml
navrim/navrim/: app.py  config.py  main.py  util.py
navrim/navrim/core/: background.py  dataset.py  token.py
navrim/navrim/endpoint/: __init__.py  auth.py  background.py  configuration.py  dataset.py  status.py
navrim/navrim/protocol/: __init__.py  codes.py  request.py  response.py  service.py
navrim/navrim/service/: supabase_api.py
navrim/resources/: tokens.yaml
navrim/scripts/: gen_frontend_protocol.py
release/app/: package-lock.json  package.json  pnpm-lock.yaml
resources/: setup.html
scripts/: README.md  check-phosphobot.sh  clean-dev-env.sh  setup.js
src/: backend-installer.js  main.js  preload.js
src/main/: backend.ts  copilotkit.ts  environment.ts  ipc.ts  main.ts  preload.ts
src/renderer/: App.css  App.tsx  index.ejs  index.tsx  preload.d.ts
src/types/: ipc.ts
(+87 files in other folders)
